samples/_failures_safe/1761076116_0f1b15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df71a2ab.c: In function ‘main’:
./samples/SAFE/__tmp_df71a2ab.c:159:5: error: expected expression at end of input
  159 |     for (int i = 0; i < 6;
      |     ^~~
./samples/SAFE/__tmp_df71a2ab.c:159:5: error: expected declaration or statement at end of input
